--- a/css/style.css
+++ b/css/style.css
@@ -77,9 +77,7 @@ body {
     padding: 26px 0;
 }
 
-.conteudo-do-header,
-.conteudo-conquistas,
-.bloco-de-numeros {
+.conteudo-do-header, .conteudo-conquistas, .bloco-de-numeros {
     display: flex;
     justify-content: space-between;
 }
@@ -146,13 +144,12 @@ body {
 
 /* NOSSAS CONQUISTAS */
 
-.todas-nossas-conquistas{
+.todas-nossas-conquistas {
     padding-top: 82px;
     padding-bottom: 82px;
 }
 
-.coluna,
-.bloco-de-conquistas {
+.coluna, .bloco-de-conquistas {
     width: 45%;
 }
 
@@ -160,7 +157,7 @@ body {
     flex-wrap: wrap;
 }
 
-.bloco-de-conquistas {
+.bloco-de-conquistas, .conteudo-vamos-la {
     display: flex;
     align-items: center;
     margin-bottom: 40px;
@@ -169,4 +166,28 @@ body {
 .bloco-de-conquistas i {
     font-size: 26px;
     margin-right: 16px;
+}
+
+/* VAMOS LÁ */
+
+.todo-conteudo-vamos-la {
+    padding: 64px 0;
+}
+
+.conteudo-vamos-la {
+    justify-content: space-between;
+}
+
+.link-roxo {
+    font-size: 20px;
+    font-weight: bold;
+    color: #9b51e0;
+    text-decoration: none;
+    margin-top: 32px;
+    display: flex;    
+    align-items: center;
+}
+
+.link-roxo i {
+    margin-left: 8px;
 }
