--- a/css/style.css
+++ b/css/style.css
@@ -77,17 +77,22 @@ body {
     padding: 26px 0;
 }
 
-.conteudo-do-header, .conteudo-conquistas, .bloco-de-numeros {
+.conteudo-do-header, 
+.conteudo-conquistas, 
+.bloco-de-numeros,
+.bloco-depoimentos {
     display: flex;
     justify-content: space-between;
 }
 
-.informacoes-do-cabecalho, .informacoes-do-cabecalho nav {
+.informacoes-do-cabecalho, 
+.informacoes-do-cabecalho nav {
     display: flex;
     align-items: center;
 }
 
-.informacoes-do-cabecalho img, .informacoes-do-cabecalho nav a {
+.informacoes-do-cabecalho img, 
+.informacoes-do-cabecalho nav a {
     margin-right: 32px;
 }
 
@@ -129,7 +134,7 @@ body {
 /* Banner Principal */
 
 .banner-principal {
-    background-image: url(../img/bg_banner.png);
+    background-image: url(../img/bg-banner.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -140,6 +145,66 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+/* DEPOIMENTOS */
+
+.todos-os-depoimentos {
+    background: #28F5BE;
+    padding: 120px 0 152px 0;
+    margin: 64px 0;
+}
+
+.depoimento {
+    background: white;
+    padding: 32px;
+    border-radius: 8px;
+    box-shadow: 0px 10px 20px rgba(41, 41, 42, 0.07);
+    margin-top: 24px;
+}
+
+.depoimento p, .depoimento h3 {
+    color: #18191f;
+    font-size: 18px;
+}
+
+.depoimento p {
+    line-height: 32px;
+    margin-bottom: 24px;
+    margin-top: -30px;
+}
+
+.depoimento p,
+.depoimento h3,
+.depoimento h4 {
+    padding-left: 32px;
+}
+
+.textos-do-depoimento:before {
+content: url(../img/aspas.png)
+}
+
+.depoimento h3 {
+    line-height: 28px;
+}
+
+.depoimento h4 {
+    font-size: 14px;
+    line-height: 24px;
+    color: #969bab;
+    font-weight: normal;
+}
+
+.margin-negativa-110 {
+    margin-top: -110px;
+}
+
+.margin-negativa-110 .depoimento:first-child {
+margin-bottom: 124px;
+}
+
+.largura-350 {
+    width: 350px;
 }
 
 /* NOSSAS CONQUISTAS */
@@ -157,9 +222,7 @@ body {
     flex-wrap: wrap;
 }
 
-.bloco-de-conquistas,
-.conteudo-vamos-la,
-.conteudo-gerencia-projetos {
+.bloco-de-conquistas, .conteudo-vamos-la, .conteudo-gerencia-projetos {
     display: flex;
     align-items: center;
     margin-bottom: 40px;
@@ -176,8 +239,7 @@ body {
     padding: 64px 0;
 }
 
-.conteudo-vamos-la,
-.conteudo-gerencia-projetos {
+.conteudo-vamos-la, .conteudo-gerencia-projetos {
     justify-content: space-between;
 }
 
@@ -187,7 +249,7 @@ body {
     color: #9b51e0;
     text-decoration: none;
     margin-top: 32px;
-    display: flex;    
+    display: flex;
     align-items: center;
 }
 
@@ -228,7 +290,7 @@ body {
 }
 
 .menu-rodape ul li {
-margin-right: 24px;
+    margin-right: 24px;
 }
 
 .menu-rodape ul li a {
