--- a/css/banner.css
+++ b/css/banner.css
@@ -8,7 +8,7 @@
 }
 
 .banner {
-    margin-bottom: 64px;
+    margin-bottom: 4rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
