--- a/css/base.css
+++ b/css/base.css
@@ -12,25 +12,25 @@
 body {
     font-family: 'Manrope', sans-serif;
     color: #333333;
-    font-size: 16px;
-    line-height: 26px;
+    font-size: 1rem;
+    line-height: 1.625rem;
 }
 
 .conteudo {
     width: 80%;
     margin: 0 auto 0 auto;
-    max-width: 1140px;
+    max-width: 71.25rem;
     min-width: 60%;
 }
 
 .bloco-de-recursos {
     text-align: center;
     width: 30%;
-    margin: 50px 0px 15px 0;
+    margin: 3.125rem 0px 0.9375rem 0;
 }
 
 .bloco-de-recursos i {
-    font-size: 48px;
+    font-size: 3rem;
 }
 
 .cor-verde {
@@ -42,8 +42,8 @@ body {
 }
 
 .titulo-bloco-de-recursos {
-    font-size: 24px;
-    line-height: 36px;
+    font-size: 1.5rem;
+    line-height: 2.25rem;
     font-weight: 600;
 }
 
@@ -60,24 +60,24 @@ body {
 }
 
 .titulo {
-    margin: 8px 0px;
+    margin: 0.5rem 0px;
     font-weight: 800;
-    font-size: 48px;
-    line-height: 64px;
+    font-size: 3rem;
+    line-height: 4rem;
 }
 
 .sub-titulo {
     font-weight: normal;
-    font-size: 18px;
-    line-height: 32px;
+    font-size: 1.125rem;
+    line-height: 2rem;
 }
 
 /*  HEADER  */
 
 .cabecalho {
     background-color: var(--cor-branca);
-    border-bottom: solid 1px #e5e9f2;
-    padding: 26px 0;
+    border-bottom: solid 0.0625rem #e5e9f2;
+    padding: 1.625rem 0;
 }
 
 .conteudo-do-header, 
@@ -96,19 +96,19 @@ body {
 
 .informacoes-do-cabecalho img, 
 .informacoes-do-cabecalho nav a {
-    margin-right: 32px;
+    margin-right: 2rem;
 }
 
 .informacoes-do-cabecalho nav a {
     font-weight: bold;
-    font-size: 14px;
-    line-height: 20px;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
     text-decoration: none;
     color: #18191f;
 }
 
 .botoes-lojas a {
-    margin-right: 12px;
+    margin-right: 0.75rem;
     text-decoration: none;
 }
 
@@ -116,9 +116,9 @@ body {
 
 .titulo-principal {
     font-weight: 800;
-    font-size: 72px;
-    line-height: 98px;
-    margin-bottom: 32px;
+    font-size: 4.5rem;
+    line-height: 6.125rem;
+    margin-bottom: 2rem;
 }
 
 .botao {
@@ -126,8 +126,8 @@ body {
     color: var(--cor-branca);
     text-decoration: none;
     text-align: center;
-    padding: 16px 67px;
-    border-radius: 8px;
+    padding: 1rem 4.1875rem;
+    border-radius: 0.5rem;
 }
 
 .botao:hover {
