--- a/css/vamos-la.css
+++ b/css/vamos-la.css
@@ -1,7 +1,7 @@
 /* VAMOS LÁ */
 
 .todo-conteudo-vamos-la {
-    padding: 64px 0;
+    padding: 4rem 0;
 }
 
 .conteudo-vamos-la, .conteudo-gerencia-projetos {
@@ -9,15 +9,15 @@
 }
 
 .link-roxo {
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: bold;
     color: #9b51e0;
     text-decoration: none;
-    margin-top: 32px;
+    margin-top: 2rem;
     display: flex;
     align-items: center;
 }
 
 .link-roxo i {
-    margin-left: 8px;
+    margin-left: 0.5rem;
 }
