--- a/css/rodape.css
+++ b/css/rodape.css
@@ -35,3 +35,10 @@
 .botoes-download-rodape a {
     margin-top: 1rem;
 }
+
+@media screen and (max-width: 30rem) {
+   .rodape {
+    padding-left: 0;
+    padding-right: 0;
+   } 
+}
