--- a/css/depoimentos.css
+++ b/css/depoimentos.css
@@ -57,3 +57,21 @@ margin-bottom: 7.75rem;
 .largura-350 {
     width: 21.875rem;
 }
+
+.titulo-historia {
+   position: relative;
+   z-index: 0;
+}
+
+.titulo-historia:before {
+    content: '';
+    width: 142px;
+    height: 120px;
+    background-image: url(../img/aspas-grande.png);
+    position: absolute;
+    bottom: 60px;
+    left: -100px;
+    background-repeat: no-repeat;
+    z-index: -1;
+    opacity: 0.4;
+}
