--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -24,6 +24,7 @@
 
 .botoes-lojas {
     margin-top: 1.25rem;
+    display: flex;
 }
 
 .img-cel {
@@ -38,6 +39,16 @@
     width: 100%;
     height: auto;
     display: block;
+}
+
+.todo-conteudo-gerencia-projetos .botoes-lojas {
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+}
+
+.margin-top-20 {
+    margin-top: 1.25rem;
 }
 
 }
