--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -11,6 +11,57 @@
         flex-direction: column;
     }
 
+.banner {
+    align-items: center;
+    text-align: center;
+    margin-bottom: 1rem;
+    }
+
+.titulo-principal {
+    font-size: 3.5rem;
+    line-height: 4.5rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+    }
+
+.informacoes-do-cabecalho, 
+.informacoes-do-cabecalho nav {
+justify-content: space-between;
+}
+
+.informacoes-do-cabecalho a:last-child,
+.botoes-lojas a:last-child {
+    margin-right: 0;
+}
+
+.titulo,
+.todos-os-depoimentos p:last-child,
+.conteudo-conquistas > .coluna > p,
+.todo-conteudo-vamos-la p,
+.conteudo-gerencia-projetos {
+    text-align: center;
+}
+
+.titulo-de-sessao {
+    width: 100%;
+}
+
+.todos-os-depoimentos,
+.todas-nossas-conquistas,
+.todo-conteudo-gerencia-projetos {
+    padding: 2rem 0 2rem 0;
+    margin: 0;
+}
+
+.todo-conteudo-vamos-la {
+    padding: 0;
+    margin: 0;
+}
+
+.link-roxo {
+    justify-content: center;
+}
+
 .bloco-de-recursos,
 .depoimento,
 .coluna {
@@ -22,9 +73,32 @@
     margin: 0;
 }
 
+/* .titulo-historia:before {
+    content: '';
+    width: 8.875rem;
+    height: 7.5rem;
+    background-image: url(../img/aspas-grande.png);
+    position: absolute;
+    bottom: 10rem;
+    left: -1.5rem;
+    background-repeat: no-repeat;
+    z-index: -1;
+    opacity: 0.4;
+} */
+
+.bloco-de-conquistas:nth-of-type(3),
+.bloco-de-conquistas:nth-of-type(4) {
+    margin-bottom: 0;
+}
+
+.bloco-de-conquistas div p {
+    text-align: left;
+}
+
 .botoes-lojas {
     margin-top: 1.25rem;
     display: flex;
+    justify-content: space-between;
 }
 
 .img-cel {
@@ -33,12 +107,16 @@
 
 .banner-principal {
     background: #f6fffc;
+    justify-content: center;
 }
 
 .imagem-responsiva {
     width: 100%;
     height: auto;
     display: block;
+}
+.img-cel {
+    margin-left: 1rem;
 }
 
 .todo-conteudo-gerencia-projetos .botoes-lojas {
@@ -47,8 +125,18 @@
     align-items:center;
 }
 
-.margin-top-20 {
-    margin-top: 1.25rem;
+.conteudo-gerencia-projetos a {
+    margin: 0;
 }
 
+.conteudo-gerencia-projetos .imagem-responsiva {
+    margin-left: 1.2rem;
+}
+
+.botoes-lojas p {
+    margin-bottom: .5rem;
+}
+
+.margin-top-20 {
+    margin-top: 2rem;
 }
