--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -73,7 +73,7 @@ justify-content: space-between;
     margin: 0;
 }
 
-/* .titulo-historia:before {
+.titulo-historia:before {
     content: '';
     width: 8.875rem;
     height: 7.5rem;
@@ -84,7 +84,7 @@ justify-content: space-between;
     background-repeat: no-repeat;
     z-index: -1;
     opacity: 0.4;
-} */
+}
 
 .bloco-de-conquistas:nth-of-type(3),
 .bloco-de-conquistas:nth-of-type(4) {
@@ -139,4 +139,6 @@ justify-content: space-between;
 
 .margin-top-20 {
     margin-top: 2rem;
+}
+
 }
