--- a/css/rodape.css
+++ b/css/rodape.css
@@ -39,7 +39,7 @@
 .conteudo-rodape div:nth-of-type(1) { order: 1; }
 .conteudo-rodape div:nth-of-type(2) { order: 2; }
 
-@media screen and (max-width: 30rem) {
+@media screen and (max-width: 480px) {
    .rodape {
     padding-left: 0;
     padding-right: 0;
